# reduce_app

./: Makefile  README.md  pyproject.toml  pytest.ini
app/core/: core_config.py  custom_logger.py  scheduler.py  utils.py
app/core/jira/: exceptions.py  jira_map.py  (+3 more)
cicd/docker/: Dockerfile.hcp5_jira2jira  Dockerfile.hcp5_kpm2jira  Dockerfile.mod_kpm2jira  docker-compose.yml
cicd/jenkins/: build.Jenkinsfile  deploy.Jenkinsfile
docs/: kpm_customer_issue_field_overview.md  kpm_jira_field_mapping.md  soap-mtom.md  supplier-reponse.puml  update-ticket.puml
docs/jira-to-kpm/: new-ticket.md  new-ticket.puml  question-question-added.md  question-question-added.puml
docs/jira_fields_overview/: jira_GRC_Risk_field_overview.md  jira_approve_field_overview.md  jira_bug_field_overview.md  jira_change_request_field_overview.md  jira_create_field_overview.md  jira_customer_issue_field_overview.md  jira_epic_field_overview.md  jira_feature_field_overview.md  jira_field_overview.md  jira_improvement_field_overview.md  jira_integration_field_overview.md  jira_review_field_overview.md  jira_story_field_overview.md  jira_task_field_overview.md
docs/kpm-to-jira/: .imlemented-feedback-from-oem.md  .implemented-feedback-from-oem.puml  info-missing-to-in-analysis-on-attachment-change.md  info-missing-to-in-analysis-on-attachment-change.puml  new-ticket.md  new-ticket.puml  question-answer-added.md  question-answer-added.puml
monitor/: __main__.py  metrics.py
monitor/api/: list_reports.html  server.py
secrets/: KPM_CERT
tests/: __init__.py
tests/app_test_data/: __init__.py
(+115 files in other folders)
